Fix jacoco so it will work again